--- a/debian/ros-fuerte-rosdoc-lite/DEBIAN/control
+++ b/debian/ros-fuerte-rosdoc-lite/DEBIAN/control
@@ -1,16 +1,13 @@
-Source: ros-groovy-rosdoc-lite
+Package: ros-fuerte-rosdoc-lite
+Version: 0.1.0-0precise
+Architecture: amd64
+Maintainer: Dirk Thomas <dthomas@willowgarage.com>
+Installed-Size: 240
+Depends: python-sphinx, python-yaml, doxygen, ros-fuerte-genmsg, python-epydoc, python-rospkg
 Section: misc
 Priority: extra
-Maintainer: Dirk Thomas <dthomas@willowgarage.com>
-Build-Depends: debhelper (>= 7.0.50~), ros-groovy-catkin
 Homepage: http://www.ros.org/wiki/rosdoc_lite
-Standards-Version: 3.9.2
-
-Package: ros-groovy-rosdoc-lite
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, python-sphinx,python-yaml,doxygen,ros-groovy-genmsg,python-epydoc,python-rospkg
 Description: Infrastructure for generating documentation of ROS packages.
  .
  This stack contains the packages:
  * rosdoc_lite: rosdoc_lite wraps documentation tools like doxygen, sphinx, and epydoc with ROS package semantics to auto-generate documentation for ROS packages. rosdoc also supports online documentation, like the ROS wiki.
-
