--- a/debian/rules
+++ b/debian/rules
@@ -10,21 +10,21 @@ export DH_OPTIONS=-v
 
 # elsewhere there is a PYTHON_PACKAGES_DIR defined.  We shouldn't
 # need this here:  this file is only for debian.
-export PYTHONPATH=/opt/ros/fuerte/lib/python2.7/dist-packages
+export PYTHONPATH=/opt/ros/groovy/lib/python2.7/dist-packages
 %:
 	dh  $@
 
 override_dh_auto_configure:
 	dh_auto_configure -Scmake -- \
 		-DCATKIN_BUILD_BINARY_PACKAGE="1" \
-		-DCMAKE_INSTALL_PREFIX="/opt/ros/fuerte" \
-		-DCMAKE_PREFIX_PATH="/opt/ros/fuerte"
+		-DCMAKE_INSTALL_PREFIX="/opt/ros/groovy" \
+		-DCMAKE_PREFIX_PATH="/opt/ros/groovy"
 	dh_auto_configure -Spython_distutils
 
 override_dh_auto_install:
 	dh_auto_install -Scmake
 	dh_auto_install -Spython_distutils -- \
-		--prefix="/opt/ros/fuerte" --install-layout=deb
+		--prefix="/opt/ros/groovy" --install-layout=deb
 
 override_dh_auto_build:
 	dh_auto_build -Scmake
