--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b1956c0
+	base = 4a58e90
 	trimbase = 
 	parent = release/hydro/rosdoc_lite
-	previous = 
+	previous = b1956c0
