--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a2e1584
+	base = e2a7d17
 	trimbase = 
 	parent = debian/hydro/rosdoc_lite
-	previous = 
+	previous = a2e1584
