--- a/src/rosdoc_lite/templates/action.template
+++ b/src/rosdoc_lite/templates/action.template
@@ -13,14 +13,10 @@
 
 <h2>File: <span class="filename">%(name)s.%(ext)s</filename></h2>
 
-<h2>Raw Message Definition</h2>
+<h2>Action Definition</h2>
+
 <div class="raw-msg">
 %(raw_text)s
-</div>
-
-<h2>Compact Message Definition</h2>
-<div class="fancy-msg">
-%(fancy_text)s
 </div>
 
 
