--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d1b4b14
+	base = 3f6eb80
 	trimbase = 
 	parent = release/indigo/rosdoc_lite
-	previous = 
+	previous = d1b4b14
