--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8981186
+	base = 332f695
 	trimbase = 
 	parent = debian/indigo/rosdoc_lite
-	previous = 
+	previous = 8981186
