--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0b9dc11
+	base = 5b6ec4c
 	trimbase = 
 	parent = rpm/indigo/rosdoc_lite
-	previous = 
+	previous = 0b9dc11
